Attempt to fix z-index (Safari Bug) (3) | Add ScrollToTop component

--- a/client/src/styles/components/auth/_SignIn.scss
+++ b/client/src/styles/components/auth/_SignIn.scss
@@ -41,6 +41,8 @@
   }
 
   &__input-wrapper {
+    z-index: 1;
+
     @extend %input-wrapper;
   }
 
@@ -52,9 +54,6 @@
   }
 
   &__placeholder {
-    @include transform(translateZ(0));
-    @include position(relative);
-
     &:before {
       color: $placeholder-font-color;
 
